Styles mobile first

--- a/index.html
+++ b/index.html
@@ -27,22 +27,24 @@
             <img src="./images/image-victor.jpg" alt="Victor's photo" />
           </div>
           <div class="card__profile">
-            <h4 class="name">Victor Crest</h4>
-            <span>26</span>
+            <div class="card__title">
+              <h4 class='name'>Victor Crest</h4>
+              <span>26</span>
+            </div>
             <p>London</p>
           </div>
         </div>
         <footer>
           <div class="card__stats">
-            <span class="stat__num">80K</span>
+            <h4 class="stat__num">80K</h4>
             <span class="stat__text">Followers</span>
           </div>
           <div class="card__stats">
-            <span class="stat__num">803</span>
+            <h4 class="stat__num">803</h4>
             <span class="stat__text">Likes</span>
           </div>
           <div class="card__stats">
-            <span class="stat__num">1.4K</span>
+            <h4 class="stat__num">1.4K</h4>
             <span class="stat__text">Photos</span>
           </div>
         </footer>
